v1.x.x.x - unreleased
======================
 CHANGED: LibPNG updated to release 1.2.4
 FIXED  : Name of MPC HC in title bar (Bug #2826963)

v1.3.1249.0 - 26 august 2009
======================
 NEW    : Support for Flac audio streams
 NEW    : Support for Dolby Digital+ (Eac3) and Dolby true HD (MLP)
 NEW    : Nellymoser audio decoder
 NEW    : Belarusian, Brazilian and Sweedish translation
 NEW    : New shader "Sharpen Complex 2" (required hardware compatible with pixel shader 2.A)
 NEW    : Support for madVR video renderer (http://madshi.net/madVR.zip)
 NEW    : Additional information on video using MediaInfo (DLL can be download from http://mediainfo.sourceforge.net and placed in mpc-hc directory)
 NEW    : Internal DXVA decoder support for H264 with Intel G45 (thanks for people who help me at Intel Corp.)
 CHANGED: Add support of interlaced flags in software mode for MPCVideoDecoder filter
 CHANGED: D3DFullScreen mode now takes into account the monitor to full-screen mode in options, if monitor is not specified on the command line.
 CHANGED: Auto-hide playlist on fullscreen(feature request #2219561) 
 CHANGED: Detours library updated to v2.1
 CHANGED: Support for AC3 in MP4 splitter
 CHANGED: Support for EAc3 in Matroska splitter
 CHANGED: Hotkeys added to support more remote control keys
 CHANGED: Support for Theora in Matroska internal splitter
 CHANGED: LibVorbis updated to v1.2.3
 CHANGED: LibOgg updated to v1.1.4
 CHANGED: Improved streaming performances
 CHANGED: Prevent display or computer to sleep during playback
 CHANGED: Faad library updated to rev 2.2.7
 CHANGED: LibPNG updated to release 1.2.38 (fix security bug)
 CHANGED: Playlist file is now saved in mpc folder (patch # 2671496)
 CHANGED: frame by frame modify to support step frame back functionality (except for VMR9) 
 CHANGED: support for AC3 in MP4 files created by Nero Digital