@@ -122,7 +122,7 @@ STDMETHODIMP CMpegSplitterFilter::GetClassID(CLSID* pClsID)
 		return __super::GetClassID(pClsID);
 }
 
-STDMETHODIMP CMpegSplitterFilter::Load(LPCOLESTR pszFileName, const AM_MEDIA_TYPE* pmt)
+void CMpegSplitterFilter::ReadClipInfo(LPCOLESTR pszFileName)
 {
 	if (wcslen (pszFileName) > 0)
 	{
@@ -141,11 +141,15 @@ STDMETHODIMP CMpegSplitterFilter::Load(LPCOLESTR pszFileName, const AM_MEDIA_TYP
 			m_ClipInfo.ReadInfo (strClipInfo);
 		}
 	}
+}
+
+STDMETHODIMP CMpegSplitterFilter::Load(LPCOLESTR pszFileName, const AM_MEDIA_TYPE* pmt)
+{
+	ReadClipInfo (pszFileName);
 	
 	return __super::Load (pszFileName, pmt);
 }
 
-//
 
 HRESULT CMpegSplitterFilter::DemuxNextPacket(REFERENCE_TIME rtStartOffset)
 {
@@ -441,6 +445,12 @@ bool CMpegSplitterFilter::DemuxLoop()
 	}
 
 	return(true);
+}
+
+bool CMpegSplitterFilter::BuildPlaylist(LPCTSTR pszFileName, CAtlList<CHdmvClipInfo::PlaylistItem>& Items)
+{
+	REFERENCE_TIME	rtDuration;
+	return SUCCEEDED (m_ClipInfo.ReadPlaylist (pszFileName, rtDuration, Items)) ? true : false;
 }
 
 // IAMStreamSelect
